k8s/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: health-api-vs
  namespace: ${NAMESPACE}
spec:
  hosts:
  - health-api-service
  - ${NAMESPACE}.${DOMAIN_NAME}
  gateways:
  - istio-system/main-gateway
  http:
  - name: primary
    route:
    - destination:
        host: health-api-stable
        port:
          number: 80
      weight: 100
    - destination:
        host: health-api-canary
        port:
          number: 80
      weight: 0
